# vcpkg-sdl2-report

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: ci.yaml
src/: main.cpp
triplets/: x64-osx-clang.toolchain.cmake  x64-osx.cmake
